Adición de iconos

--- a/form/index.html
+++ b/form/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="./img/logo HSN.png">
+    <link rel="shortcut icon" href="./img/Logo.png">
+    <img src="./img/logo HSN.png" alt="Aqui va el logo">
     <title>Form_Input</title>
 </head>
 <body>
     <h1>
         Lista de suplementos:
+        
     </h1>
     <ol>    
         <a href="https://www.hsnstore.com/marcas/raw-series/creatina-monohidrato-en-polvo">Creatina monohidratada</a>
@@ -45,11 +47,11 @@
             <input type="text" id="name" placeholder="Your name">
         </label>
         <label for="training time">
-            <span>when did you begin crossfit?</span>
+            <span>since many time do you take supplements?</span>
             <input type="date" id="training time">
         </label>
         <label for="train journal">
-            <span>What time you train?</span>
+            <span>What time do you drink your supplements?</span>
             <input type="time" id="train journal">
         </label>
     </form>
